# pymech

./: .coveragerc  .coveralls.yml  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  THANKS.md  codemeta.json  noxfile.py  pylock.toml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: condarc.yml  environment.yml  environment_pypy.yml
.github/workflows/: build.yaml  deploy.yaml  tests.yml
doc/: install_mayavi
docs/: Makefile  conf.py  core.rst  dataset.rst  deprecations.rst  dev.md  exadata.rst  index.rst  install_packages  internals.rst  make.bat  meshtools.rst  neksuite.rst  release.rst  simsonsuite.rst  tests.rst  usage.ipynb  usage.myst.md  vtksuite.rst
docs/asv_bench/: README.md  asv.conf.json  asv_run_all_tags.sh
docs/asv_bench/benchmarks/: __init__.py  bench_open_dataset.py  bench_readnek.py
docs/asv_bench/results/: benchmarks.json
docs/asv_bench/results/archmage/: 04de4f99-conda-py_=_pypy-dask[array]-numpy-pandas.json  04de4f99-conda-py_=_pypy-numpy-pandas.json  04de4f99-virtualenv-py3.8-dask[array]-numpy-pandas.json  04de4f99-virtualenv-py3.8-numpy-pandas.json  058bf1b7-conda-py_=_pypy-dask[array]-numpy-pandas.json  058bf1b7-conda-py_=_pypy-numpy-pandas.json  058bf1b7-virtualenv-py3.8-dask[array]-numpy-pandas.json  058bf1b7-virtualenv-py3.8-numpy-pandas.json  201813bb-conda-py_=_pypy-dask[array]-numpy-pandas.json  201813bb-conda-py_=_pypy-numpy-pandas.json  201813bb-virtualenv-py3.8-dask[array]-numpy-pandas.json  201813bb-virtualenv-py3.8-numpy-pandas.json  271b56aa-conda-py_=_pypy-dask[array]-numpy-pandas.json  271b56aa-conda-py_=_pypy-numpy-pandas.json  271b56aa-virtualenv-py3.8-dask[array]-numpy-pandas.json  271b56aa-virtualenv-py3.8-numpy-pandas.json  403f9312-conda-py_=_pypy-dask[array]-numpy-pandas.json  403f9312-conda-py_=_pypy-numpy-pandas.json  403f9312-virtualenv-py3.8-dask[array]-numpy-pandas.json  403f9312-virtualenv-py3.8-numpy-pandas.json  4e524642-conda-py_=_pypy-dask[array]-numpy-pandas.json  4e524642-conda-py_=_pypy-numpy-pandas.json  4e524642-virtualenv-py3.8-dask[array]-numpy-pandas.json  4e524642-virtualenv-py3.8-numpy-pandas.json  5a8a37ce-conda-py_=_pypy-dask[array]-numpy-pandas.json  5a8a37ce-conda-py_=_pypy-numpy-pandas.json  5a8a37ce-virtualenv-py3.8-dask[array]-numpy-pandas.json  5a8a37ce-virtualenv-py3.8-numpy-pandas.json  70867c8e-conda-py_=_pypy-dask[array]-numpy-pandas.json  70867c8e-conda-py_=_pypy-numpy-pandas.json  70867c8e-virtualenv-py3.8-dask[array]-numpy-pandas.json  70867c8e-virtualenv-py3.8-numpy-pandas.json  764431a3-conda-py_=_pypy-dask[array]-numpy-pandas.json  764431a3-conda-py_=_pypy-numpy-pandas.json  764431a3-virtualenv-py3.8-dask[array]-numpy-pandas.json  764431a3-virtualenv-py3.8-numpy-pandas.json  77a7c66e-conda-py_=_pypy-dask[array]-numpy-pandas.json  77a7c66e-conda-py_=_pypy-numpy-pandas.json  77a7c66e-virtualenv-py3.8-dask[array]-numpy-pandas.json  77a7c66e-virtualenv-py3.8-numpy-pandas.json  (+5 more)
docs/asv_bench/results/tuxpulse/: 2cb0b50e-virtualenv-py3.8-dask[array]-numpy-pandas.json  2cb0b50e-virtualenv-py3.8-numpy-pandas.json  427ce267-virtualenv-py3.9-dask[array]-numpy-pandas.json  427ce267-virtualenv-py3.9-numpy-pandas.json  53a66ce5-virtualenv-py3.8-dask[array]-numpy-pandas.json  53a66ce5-virtualenv-py3.8-numpy-pandas.json  b11e076b-virtualenv-py3.9-dask[array]-numpy-pandas.json  b11e076b-virtualenv-py3.9-numpy-pandas.json  machine.json
paper/: Gemfile  Makefile  generate_metadata.py  joss-defaults.yaml  paper.bib  paper.md
pymech/: __init__.py  core.py  dataframe.py  dataset.py  exadata.py  log.py  meshplot.py  meshtools.py  neksuite.py  readma2.py  simsonsuite.py  vtksuite.py
pymech/neksuite/: field.py  map.py  mesh.py
requirements/: dev.txt  docs.txt  full.txt  main.txt  tests-editable.txt  tests.txt  types.txt  vtk.txt
src/: exadata.py  neksuite.py  simsonsuite.py  vtksuite.py
src/pymech/: __init__.py  core.py  dataset.py  exadata.py  log.py  simsonsuite.py  vtksuite.py
src/pymech/neksuite/: __init__.py  field.py  map.py  mesh.py
tests/: conftest.py  run_tests.py  test_all.py  test_datalims.py  test_dataset.py  test_dataset_cbox.py  test_dataset_unstruct.py  test_header.py  test_imports.py  test_mfdataset.py  test_vtk.py
tests/nek/: 2D_section_R360.re2  2D_section_R360.rea  box2d.re2  box3d.re2  box3d.rea  m3j_bf_test.rea
tests/simson/: channel3D_t10000v.u  u.plane
