[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "pymech"
dynamic = ["version"]
description = "A Python suite of routines for Nek5000 and Simson."
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">= 3.9"
authors = [
    { name = "eX-Mech Developers", email = "dev@fluid.quest" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "attrs >= 21.4.0",
    "numpy >= 1.18, <2",
    "xarray >= 0.19.0, != 0.20.0, != 0.20.1",
]

[project.optional-dependencies]
opt = [
    "dask",
    "rich",
]
vtk = [
    "mayavi",
    "pygments >= 2.16.1",
]
full = [
    "pymech[opt,vtk]"
]
docs = [
    "asv >= 0.5.1",
    "furo",
    "matplotlib",
    "myst-nb",
    "pygments >= 2.16.1",
    "sphinx",
    "sphinx-autobuild",
    "sphinx-copybutton",
    "sphinx-inline-tabs",
]
tests = [
    "pymech[opt]",
    "coverage[toml]",
    "pygments >= 2.16.1",
    "pytest >= 6.2.5",
    "pytest-cov >= 3.0.0",
    "pytest-xdist >= 2.4.0",
]
types = [
    "mypy",
    "typing-extensions",
]
dev = [
    "pymech[opt,docs,tests,types]"
]

[project.entry-points."xarray.backends"]
pymech = "pymech.dataset:PymechXarrayBackend"

[project.urls]
"Bug-Tracker" = "https://github.com/eX-Mech/pymech/issues"
Changelog = "https://pymech.readthedocs.io/en/stable/changelog.html"
Documentation = "https://pymech.readthedocs.io/en/stable"
Homepage = "https://github.com/eX-Mech/pymech"

[tool.pdm.build]
package-dir = "src"

[tool.pdm.version]
source = "scm"
write_to = "pymech/_version.py"
write_template = "__version__ = '{}'"

[tool.coverage.run]
source = ["pymech", "./tests"]
data_file = ".coverage/coverage"
omit = [
    "*/try_*.py",
    "*/_old_*.py"
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "if __name__ == .__main__.:",
    'if "sphinx" in sys.modules:',
    "raise FileNotFoundError",
    "raise NotImplementedError",
    "raise ValueError",
    "except KeyError:",
    "except ImportError:",
    "except AttributeError:",
    "except NotImplementedError:",
    "except StopIteration:",
]

[tool.coverage.html]
directory = ".coverage/html"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "NPY", "PLE", "PLW"]
ignore = [ "E203", "E501"]

[tool.mypy]
ignore_missing_imports = true
show_error_codes = true
