[metadata]
name = pymech
author = eX-Mech Developers
author_email = dev@fluid.quest
description = A Python suite of routines for Nek5000 and Simson.
long_description = file: README.md
long_description_content_type = text/markdown
license =  GNU General Public License v3 or later (GPLv3+)
license_files = LICENSE
url = https://github.com/eX-Mech/pymech
project_urls =
    Bug Tracker = https://github.com/eX-Mech/pymech/issues
    Documentation = https://pymech.readthedocs.io/en/stable
    Changelog = https://pymech.readthedocs.io/en/stable/changelog.html
classifiers =
    # Development Status :: 4 - Beta
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Scientific/Engineering

[options]
python_requires = >= 3.7
packages = find:
install_requires =
    numpy
    xarray >= 0.19.0, != 0.20.0, != 0.20.1
    importlib_metadata < 5.0.0 ; python_version < "3.8"
    attrs >= 21.4.0

[options.extras_require]
opt =
    rich
    dask
    numpy >= 1.18

vtk =
    mayavi

full =
    %(opt)s
    %(vtk)s

# The remaining extra groups are meant for development

docs =
    sphinx
    furo
    sphinx-autobuild
    sphinx-copybutton
    sphinx-inline-tabs
    myst-nb
    matplotlib
    asv >= 0.5.1

tests =
    %(opt)s
    coverage[toml]
    pytest >= 6.2.5
    pytest-cov >= 3.0.0
    pytest-xdist >= 2.4.0

types =
    typing-extensions
    mypy

dev =
    %(docs)s
    %(tests)s
    %(types)s
    nox
    pre-commit
    pyperf
    virtualenv

[options.entry_points]
xarray.backends =
    pymech = pymech.dataset:PymechXarrayBackend

[flake8]
max-line-length = 88
extend-ignore = W503, E203, E501

[mypy]
ignore_missing_imports = True
show_error_codes = True
